# Hailo-Application-Code-Examples

yolov5_yolov7_detection_cpp/: CMakeLists.txt
